--- a/dese.html
+++ b/dese.html
@@ -66,7 +66,7 @@
   <a href="#navigation"><img src="images/dese/chevron.svg" alt="chevron" class="dese-chevron"></a>
 
   <section class="dese-hero">
-    <img src="images/dese/dese-hero.svg" alt="dese-img" class="dese-img">
+    <img src="images/dese/dese-hero.png" alt="dese-img" class="dese-img">
         <a href="#dese-about" class="arrow-link">
             <img src="images/arrow.svg" alt="arrow-white" class="arrow-white">
         </a>
@@ -93,7 +93,7 @@
     <br>
     <p>We have utilised three research methods to identify any UI pain points that users experience while interacting with the DESE website: heuristic evaluation, colour accessibility test and moderated remote usability tests.</p>
     <div class="secondary-navigation">
-        <img src="images/dese/secondary-navigation.svg" alt="secondary-navigation" class="secondary-navigation-img">
+        <img src="images/dese/secondary-navigation.png" alt="secondary-navigation" class="secondary-navigation-img">
         <div class="secondary-navigation-text">
             <h3>Secondary navigation (Desktop)</h3>
             <br>
@@ -107,11 +107,11 @@
             <br>
             <p>The website uses the hamburger menu for its mobile navigation. Again, the amount of information being presented within the menu was reported as overwhelming to most users. </p>
         </div>
-        <img src="images/dese/menu.svg" alt="menu" class="menu-img">
+        <img src="images/dese/menu.png" alt="menu" class="menu-img">
     </div>
 
     <div class="website-cards">
-        <img src="images/dese/webcards.svg" alt="website-cards" class="website-cards-img">
+        <img src="images/dese/webcards.png" alt="website-cards" class="website-cards-img">
         <div class="website-cards-text">
             <h3>Website cards</h3>
             <br>
@@ -125,23 +125,23 @@
             <br>
             <p>Users expected the search bar would stay at its original spot when searching instead of directing users to a different search page. </p>
         </div>
-        <img src="images/dese/search-bar.svg" alt="search-bar" class="search-bar-img">
+        <img src="images/dese/search-bar.png" alt="search-bar" class="search-bar-img">
     </div>
 
     <div class="card-sorting">
         <h2>Card Sorting</h2>
         <br>
         <p>Cards for all the primary and secondary pages that appear in the DESE website navigation were created. We created a new website structure by using the define, group and structure approach. </p>
-            <img src="images/dese/card-sorting-img.svg" alt="card-sorting" class="card-sorting-img">
+            <img src="images/dese/card-sorting-img.png" alt="card-sorting" class="card-sorting-img">
     </div>
 
     <div class="sitemap">
         <h2>Sitemap</h2>
         <br>
         <div class="sitemap-container">
-            <img src="images/dese/site-map-1.svg" alt="sitemap-1" class="sitemap-img">
+            <img src="images/dese/site-map-1.png" alt="sitemap-1" class="sitemap-img">
             <h5>Navigation Bar Hierarchy </h5>
-            <img src="images/dese/site-map-2.svg" alt="sitemap-2" class="sitemap-img">
+            <img src="images/dese/site-map-2.png" alt="sitemap-2" class="sitemap-img">
             <h5>Footer Hierarchy </h5>
         </div>
     </div>
@@ -257,11 +257,11 @@
             </ul>
         </div>
         <div class="dese-annotation">
-            <img src="images/dese/dese-annotation.svg" alt="dese-annotation" class="dese-annotation-img">
+            <img src="images/dese/dese-annotation.png" alt="dese-annotation" class="dese-annotation-img">
             <h3>Annotating and Redlining Usability Issues</h3>
         </div>
     </div>
-    <img src="images/dese/dese-mockups.svg" alt="dese-mockups" class="dese-mockups">
+    <img src="images/dese/dese-mockups.png" alt="dese-mockups" class="dese-mockups">
 </section>
 
 <section class="dese-summary">
@@ -286,7 +286,7 @@
     <div class="case-studies">
         <div class="ebuddy">
             <a href="ebuddy.html">
-                <img src="images/ebuddy.svg" alt="ebuddy" class="ebuddy-img">
+                <img src="images/ebuddy.png" alt="ebuddy" class="ebuddy-img">
             </a>
             <a href="ebuddy.html">
                 <h3>eBuddy</h3>
@@ -295,7 +295,7 @@
         
         <div class="Jade-Agencies">
             <a href="jade.html">
-            <img src="images/Jade agencies.svg" alt="Jade Agencies" class="Jade-agencies-img">
+            <img src="images/Jade-agencies.png" alt="Jade Agencies" class="Jade-agencies-img">
             </a>
 
             <a href="jade.html">
