--- a/ebuddy.html
+++ b/ebuddy.html
@@ -62,7 +62,7 @@
 <a href="#navigation"><img src="images/ebuddy/chevron.svg" alt="chevron" class="ebuddy-chevron"></a>
 
 <section class="ebuddy-hero">
-    <img src="images/ebuddy/ebuddy-hero.svg" alt="ebuddy-img" class="ebuddy-img">
+    <img src="images/ebuddy/ebuddy-hero.png" alt="ebuddy-img" class="ebuddy-img">
         <a href="#ebuddy-about" class="arrow-link">
             <img src="images/arrow.svg" alt="arrow-white" class="arrow-white">
         </a>
@@ -129,7 +129,7 @@
     <br>
     <p>Based on the research results, the main persona was identified:</p>
     <br>
-    <img src="images/ebuddy/ebuddy-user-persona.svg" alt="ebuddy-user-persona-img" class="ebuddy-user-persona-img">
+    <img src="images/ebuddy/ebuddy-user-persona.png" alt="ebuddy-user-persona-img" class="ebuddy-user-persona-img">
     </div>
 </section>
 
@@ -139,27 +139,27 @@
     <br>
     <p>A storyboard was drawn to visualize a user’s journey when getting to use the eBuddy app. </p>
     <br>
-    <img src="images/ebuddy/ebuddy-storyboard.svg" alt="ebuddy-storyboard-img" class="ebuddy-storyboard-img">
+    <img src="images/ebuddy/ebuddy-storyboard.png" alt="ebuddy-storyboard-img" class="ebuddy-storyboard-img">
     <div class="ebuddy-user-flow">
         <h2>User Flow</h2>
         <br>
         <p>User flows were created to display the complete path a user takes when verifying user identity, using the in-app ice-breaker games and filtering out individual users based on shared interests. </p>
         <div class="user-flow-cards">
             <a href="filter-out.html" target="_blank" id="fillter-out" class="uf-cards">
-                <img src="images/ebuddy/ebuddy-filter-out.svg" alt="ebuddy-filter-out" class="ufc-img">
+                <img src="images/ebuddy/ebuddy-filter-out.png" alt="ebuddy-filter-out" class="ufc-img">
                     <div class="ufc-text">
                         <p>Filter out individual users based on shared interests</p>
                     </div>
             </a>
             <a href="identity-verification.html" target="_blank" id="user-identity-verification" class="uf-cards">
-                <img src="images/ebuddy/ebuddy-identity.svg" alt="ebuddy-user-vertification" class="ufc-img">
+                <img src="images/ebuddy/ebuddy-identity.png" alt="ebuddy-user-vertification" class="ufc-img">
                     <div class="ufc-text">
                         <p>User identity vertification</p>
                     </div>
             </a>
 
             <a href="ice-breaker-games.html" target="_blank" id="ice-breaker" class="uf-cards">
-                <img src="images/ebuddy/ebuddy-ice-breakers.svg" alt="ebuddy-ice-breaker" class="ufc-img">
+                <img src="images/ebuddy/ebuddy-ice-breakers.png" alt="ebuddy-ice-breaker" class="ufc-img">
                     <div class="ufc-text">
                         <p>In-app ice-breaker games</p>
                     </div>
@@ -170,11 +170,11 @@
 
 <section class="ebuddy-prototyping">
     <h2 id="prototyping-title">PROTOTYPING</h2>
-    <h2>Low Fidelity Wireframes</h2>
+    <h2>Medium Fidelity Wireframes</h2>
     <br>
-    <p>We created low-fidelity wireframes and prototypes using Adobe XD to brainstorm and test the initial design ideas.</p>
+    <p>We created Medium-fidelity wireframes and prototypes using Adobe XD to brainstorm and test the initial design ideas.</p>
     <div class="ebuddy-low-fidelity-container">
-        <img src="images/ebuddy/ebuddy-low-fidelity.svg" alt="ebuddy-low-fidelity" class="ebuddy-low-fidelity">
+        <img src="images/ebuddy/ebuddy-low-fidelity.png" alt="ebuddy-low-fidelity" class="ebuddy-low-fidelity">
     </div>
 </section>
 
@@ -194,16 +194,16 @@
             <p><strong>We gained the following insights:</strong></p>
             <ul>
                 <li>- Two participants struggled a bit to find the match button.</li>
-                <li>- One participant commented the heart icon did not signify if they are likes options for a specific feature or to match with someone.</li>
+                <li>- One participant commented the heart icon did not signify clear enough whether it indicates liking a specific feature or liking the person.</li>
                 <li>- Two participants clicked the setting icon instead of editing profile to verify the account. </li>
             </ul>
         </div>
         <div class="ebuddy-annotation">
-            <img src="images/ebuddy/ebuddy-annotation.svg" alt="ebuddy-annotation" class="ebuddy-annotation-img">
+            <img src="images/ebuddy/ebuddy-annotation.png" alt="ebuddy-annotation" class="ebuddy-annotation-img">
             <h3>Annotating and Redlining Usability Issues</h3>
         </div>
     </div>
-    <img src="images/ebuddy/ebuddy-mockups.svg" alt="ebuddy-mockups" class="ebuddy-mockups">
+    <img src="images/ebuddy/ebuddy-mockups.png" alt="ebuddy-mockups" class="ebuddy-mockups">
 </section>
 
 <section class="ebuddy-summary">
@@ -220,7 +220,7 @@
     <div class="case-studies">
         <div class="DESE">
             <a href="dese.html">
-            <img src="images/DESE.svg" alt="DESE" class="DESE-img">
+            <img src="images/DESE.png" alt="DESE" class="DESE-img">
             </a>
 
             <a href="dese.html">
@@ -230,7 +230,7 @@
 
         <div class="Jade-Agencies">
             <a href="jade.html">
-            <img src="images/Jade agencies.svg" alt="Jade Agencies" class="Jade-Agencies-img">
+            <img src="images/Jade-agencies.png" alt="Jade Agencies" class="Jade-Agencies-img">
             </a>
             
             <a href="jade.html">
