--- a/filter-out.html
+++ b/filter-out.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-<img src="images/ebuddy/filter-out.svg" alt="filter-out" class="filter-out" width="100%">
+<img src="images/ebuddy/filter-out.png" alt="filter-out" class="filter-out" width="100%">
 </body>
 
 </html>
