--- a/identity-verification.html
+++ b/identity-verification.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-<img src="images/ebuddy/identity-vertification.svg" alt="identity-verification" class="identity-verification" width="100%">
+<img src="images/ebuddy/identity-vertification.png" alt="identity-verification" class="identity-verification" width="100%">
 </body>
 
 </html>
