--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   <section id="content-case-study" class="content-case-study">
     <div id="case1" class="case-study">
       <a href="ebuddy.html">
-        <img src="images/ebuddy.svg" alt="ebuddy" class="case-study-img">
+        <img src="images/ebuddy.png" alt="ebuddy" class="case-study-img">
         <h3><span>eBuddy</span></h3>
       </a>
       <p>Designing a social networking app to shorten the process of connecting people who share the same interests. </p>
@@ -131,7 +131,7 @@
 
     <div id="case2" class="case-study">
      <a href="dese.html">
-        <img src="images/DESE.svg" alt="DESE" class="case-study-img">
+        <img src="images/DESE.png" alt="DESE" class="case-study-img">
         <h3><span>DESE</span></h3>
       </a>
       <p>Redesigning the navigation system and reorganising the presentation of existing information to reduce the cognitive load for users when interacting with the website. </p>
@@ -139,7 +139,7 @@
 
     <div id="case3" class="case-study">
       <a href="jade.html">
-        <img src="images/Jade agencies.svg" alt="Jade Agencies" class="case-study-img">
+        <img src="images/Jade-agencies.png" alt="Jade Agencies" class="case-study-img">
         <h3><span>Jade Agencies</span></h3>
       </a>
       <p>Renewing the website to showcase a combination of sleek modernity and Chinese cultural understanding while clearly providing all business information.</p>
