--- a/jade.html
+++ b/jade.html
@@ -62,7 +62,7 @@
   <a href="#navigation"><img src="images/jade/chevron.svg" alt="chevron" class="jade-chevron"></a>
 
   <section class="jade-hero">
-    <img src="images/jade/jade-hero.svg" alt="jade-img" class="jade-img">
+    <img src="images/jade/jade-hero.png" alt="jade-img" class="jade-img">
         <a href="#jade-about" class="arrow-link">
             <img src="images/arrow.svg" alt="arrow-white" class="arrow-white">
         </a>
@@ -149,17 +149,17 @@
     <h2 id="definition-title">DEFINITION</h2>
     <h2>Problem Statement</h2>
     <br>
-    <p>The website is the font-face of the company which was designed and developed for potential clients to get a good understanding of the agency’s services, marketing messages, contact details, as well as staff information. </p>
+    <p>The Jade Agencies' website is the font-face of the company which was designed and developed for potential clients to get a good understanding of the agency’s services, marketing messages, contact details, as well as staff information. </p>
     <br>
     <p>Based on the usability testing results, I have concluded that the current website fails to convey the brand personality and communicate a sense of professionalism to users, which would affect the chance of customers choosing the business over other competitors existing in the industry.</p>
     <br>
     <p><strong>How might we make the current website design more appealing and engaging so that the Jade agency can attract more customers over its competitors? </strong></p>
-    <div class="jade-user-persona">
-        <h2>User Persona</h2>
+    <!-- <div class="jade-user-persona">
+        <h2>Bob Brown</h2>
         <br>
         <p>Based on the research results, the main persona was identified:</p>
         <br>
-        <img src="images/jade/jade-user-persona.svg" alt="jade-user-persona-img" class="jade-user-persona-img">
+        <img src="images/jade/jade-user-persona.svg" alt="jade-user-persona-img" class="jade-user-persona-img"> -->
     </div>
 
     <div class="jade-feature-prioritisation">
@@ -167,7 +167,7 @@
         <br>
         <p>Potential features were developed using a ‘Mental Model’ technique and mapped out their possible value using a Feature Prioritisation map.</p>
         <br>
-        <img src="images/jade/jade-feature-prioritisation.svg" alt="jade-feature-prioritisation" class="feature-prioritisation-img">
+        <img src="images/jade/jade-feature-prioritisation.png" alt="jade-feature-prioritisation" class="feature-prioritisation-img">
     </div>
 
     <div class="jade-solution-statement">
@@ -183,15 +183,15 @@
     <br>
     <p>A storyboard was drawn to visualize a user’s journey when getting to use the agency’s website. </p>
     <br>
-    <img src="images/jade/jade-storyboard.svg" alt="jade-storyboard-img" class="jade-storyboard-img">
+    <img src="images/jade/jade-storyboard.png" alt="jade-storyboard-img" class="jade-storyboard-img">
     <div class="jade-sitemap">
         <h2>Sitemap</h2>
         <br>
         <p>Navigation bar hierarchy:</p>
-        <img src="images/jade/jade-navigation-bar-hierarchy.svg" alt="jade-sitemap" class="jade-sitemap-img">
+        <img src="images/jade/jade-navigation-bar-hierarchy.png" alt="jade-sitemap" class="jade-sitemap-img">
         <br>
         <p>Footer hierarchy:</p>
-        <img src="images/jade/jade-footer-hierarchy.svg" alt="jade-sitemap" class="jade-sitemap-img">   
+        <img src="images/jade/jade-footer-hierarchy.png" alt="jade-sitemap" class="jade-sitemap-img">   
     </div>
 </section>
 
@@ -201,15 +201,15 @@
     <br>
     <p>I created low-fidelity wireframes and prototypes using Adobe XD to brainstorm and test the initial design ideas.</p>
     <div class="jade-low-fidelity-container">
-        <img src="images/jade/jade-low-fidelity-1.svg" alt="jade-low-fidelity" class="jade-low-fidelity">
-        <img src="images/jade/jade-low-fidelity-2.svg" alt="jade-low-fidelity" class="jade-low-fidelity">
+        <img src="images/jade/jade-low-fidelity-1.png" alt="jade-low-fidelity" class="jade-low-fidelity">
+        <img src="images/jade/jade-low-fidelity-2.png" alt="jade-low-fidelity" class="jade-low-fidelity">
     </div>
     <h2 id="high-fidelity-wireframes">High Fidelity Wireframes:</h2>
     <br>
     <p>High fidelity wireframes incorporated the desired imagery, colour palette, typography and redesigned logo. </p>
     <div class="jade-high-fidelity-container">
-        <img src="images/jade/jade-high-fidelity-1.svg" alt="jade-high-fidelity" class="jade-high-fidelity">
-        <img src="images/jade/jade-high-fidelity-2.svg" alt="jade-high-fidelity" class="jade-high-fidelity">
+        <img src="images/jade/jade-high-fidelity-1.png" alt="jade-high-fidelity" class="jade-high-fidelity">
+        <img src="images/jade/jade-high-fidelity-2.png" alt="jade-high-fidelity" class="jade-high-fidelity">
     </div>
 </section>
 
@@ -235,11 +235,11 @@
             </ul>
         </div>
         <div class="jade-annotation">
-            <img src="images/jade/jade-annotation.svg" alt="jade-annotation" class="jade-annotation-img">
+            <img src="images/jade/jade-annotation.png" alt="jade-annotation" class="jade-annotation-img">
             <h3>Annotating and Redlining Usability Issues</h3>
         </div>
     </div>
-    <img src="images/jade/jade-mockups.svg" alt="jade-mockups" class="jade-mockups">
+    <img src="images/jade/jade-mockups.png" alt="jade-mockups" class="jade-mockups">
 </section>
 
 <img src="images/jade/Jade-agencies.gif" alt="jade-agencies-gif" class="jade-agencies-gif">
@@ -257,7 +257,7 @@
     <div class="case-studies">
         <div class="DESE">
             <a href="dese.html">
-            <img src="images/DESE.svg" alt="DESE" class="DESE-img">
+            <img src="images/DESE.png" alt="DESE" class="DESE-img">
             </a>
 
             <a href="dese.html">
@@ -266,7 +266,7 @@
         </div>
         <div class="ebuddy">
             <a href="ebuddy.html">
-            <img src="images/ebuddy.svg" alt="eBuddy" class="ebuddy-img">
+            <img src="images/ebuddy.png" alt="eBuddy" class="ebuddy-img">
             <h3>eBuddy</h3>
             </a>
         </div>
