--- a/about.html
+++ b/about.html
@@ -63,11 +63,11 @@
       <div class="about-me-container">
         <div class="about-me">
             <h1>About Me</h1>
-            <p>I am a UX/UI Designer with a background in applied psychology. I am a problem solver, critical thinker and passionate idealist who strives to marry form and function in the digital space. <br>
+            <p>A UX/UI Designer with a background in applied psychology. A problem solver, critical thinker and passionate idealist who strives to marry form and function in the digital space. <br>
                 <br>
-                I acquired a wide range of skills throughout my education. I specialise in data analysis, user research and insight development, informed by the unique background in psychology. I am passionate about comprehending user behaviours, solving user problems and creating dynamic user interfaces to bring joy to the user experience. <br>
+                Acquired a wide range of skills throughout years of education. Specialise in data analysis, user research and insight development, informed by the unique background in psychology. Passionate about comprehending user behaviours, solving user problems and creating dynamic user interfaces to bring joy to the user experience. <br>
                 <br>
-                My designs are always user-centred while remaining cognisant of business goals. I am a self-motivated learner and thrives on absorbing new information and skills.</p>
+                My designs are always user-centred while remaining cognisant of business goals. A self-motivated learner and thrives on absorbing new information and skills.</p>
         </div>
         <img src="images/About-me-img.svg" alt="About me image" class="about-me-img">
         </div>
