--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <section class="content">
     <div class="self-introduction">
       <h1>Hi, I am Aileen Xin, a UX/UI Designer.</h1>
-      <p>I am a UX/UI Designer with a background in applied psychology. I am a problem solver, critical thinker and
+      <p>A UX/UI Designer with a background in applied psychology. A problem solver, critical thinker and
         passionate idealist who strives to marry form and function in the digital space. </p>
     </div>
     <div class="img-myself">
