--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
                 <br>
                 Acquired a wide range of skills throughout years of education. Specialise in data analysis, user research and insight development, informed by the unique background in psychology. Passionate about comprehending user behaviours, solving user problems and creating dynamic user interfaces to bring joy to the user experience. <br>
                 <br>
-                My designs are always user-centred while remaining cognisant of business goals. A self-motivated learner and thrives on absorbing new information and skills.</p>
+                Designs are always user-centred while remaining cognisant of business goals. A self-motivated learner and thrives on absorbing new information and skills.</p>
         </div>
         <img src="images/About-me-img.svg" alt="About me image" class="about-me-img">
         </div>
